Upcoming:
- Fixed a problem with the builder when copying a wither structure it would duplicate one wither skull

1.16-3.1.10:
- Added a new block tag rftoolsbuilder:dontremoveme which the Builder will respect and in which case the Builder will not remove the block (or replace with dirt)

1.16-3.1.9:
- Fixed the support block causing blocks to be placed wrong in copy mode. Support blocks now have material STRUCTURAL_AIR
- Fixed the translated name for the support block

1.16-3.1.8:
- When manually clearing builder support blocks they will now also check diagonally
- To prevent support blocks from not being cleared support mode is now automatically disabled when changing the settings on the shape card

1.16-3.1.7:
- Fixed a bug with the shield on some locales (Turkish)

1.16-3.1.6:
- Fix where preview of the support blocks would break due to wrong side

1.16-3.1.5:
- Updated to latest version of McJtyLib

1.16-3.1.4:
- Updated to latest version of McJtyLib

1.16-3.1.3:
- Updated to latest version of McJtyLib
- The hud for the Builder is full bright again making it easier to read

1.16-3.1.2:
- Fixed the shield so that it blocks more passive creatures (like villagers)

1.16-3.1.1:
- The builder and shield projector use a better fake player that matches the name of the real player if online
- Fixed xray problem with the support blocks
- The Builder will now also support the filter module for item collection

1.16-3.1.0:
- Small fix for mojang mappings
- The space chamber has been ported
- The Builder chunkloads again
- Added TOP support for the Builder, the Shield Projector and the Space Chamber Controller

1.16-3.0.17:
- The Builder and Shield will now (if possible) use a fake player with the same UUID as the player that placed the builder

1.16-3.0.16:
- Fix for McJtyLib update

1.16-3.0.15:
- Fixed a problem with the builder which was no longer able to break blocks

1.16-3.0.14: